Modify player name and stats in player3.html
Updated player details and stats in player3.html.

--- a/player3.html
+++ b/player3.html
@@ -61,7 +61,7 @@
                     <div class="player-rating">46</div>
                 </div>
                 <div class="player-details">
-                    <h1>Chris "Skills"</h1>
+                    <h1>TYGER "CHAMA"</h1>
                     <div class="player-tagline">The Imposter</div>
                     <div class="player-motto">"how did i get here?"</div>
                 </div>
@@ -169,4 +169,5 @@
     
     <script src="player-script.js"></script>
 </body>
+
 </html>
